force-app/main/default/objects/State__c/fields/Cibil_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Cibil_State_Code__c</fullName>
    <label>Cibil State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>