force-app/main/default/objects/State__c/fields/ICICI_State_Code__c.field-meta.xml
<CustomField>
    <fullName>ICICI_State_Code__c</fullName>
    <label>ICICI State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>