force-app/main/default/objects/State__c/fields/Sherlock_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Sherlock_State_Code__c</fullName>
    <label>Sherlock State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>