force-app/main/default/objects/State__c/fields/Stamp_Duty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Amount__c</fullName>
    <label>Stamp Duty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>