force-app/main/default/objects/State__c/fields/Stamp_Duty_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Applicable__c</fullName>
    <label>Stamp Duty Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>