force-app/main/default/objects/State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cibil_State_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Stamp_Duty_Amount__c</columns>
    <columns>Stamp_Duty_Applicable__c</columns>
    <columns>State_Code__c</columns>
    <columns>Sherlock_State_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>